--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "@mantine/core": "7.4.1",
     "@mantine/hooks": "7.4.1",
+    "@mantine/notifications": "^7.4.1",
     "@tabler/icons-react": "^2.46.0",
+    "ethers": "^6.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0"
