--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -42,7 +42,7 @@ jobs:
         run: npm install
   
       - name: Build
-        run: npm run build -- --base=/eth-utils/
+        run: VITE_BASENAME="/eth-utils/" npm run build -- --base=/eth-utils/
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
